--- a/src/main/resources/templates/saveproductscreen.html
+++ b/src/main/resources/templates/saveproductscreen.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Save Product Screen</title>
+    <title>Save Custom Tractor Screen</title>
 </head>
 <body>
-<p>Please save product before adding parts!</p>
+<p>Please save Custom Tractor before adding parts!</p>
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
 </body>
