--- a/src/main/resources/templates/negativeerror.html
+++ b/src/main/resources/templates/negativeerror.html
@@ -5,7 +5,7 @@
     <title>Negative Error</title>
 </head>
 <body>
-<p>Cannot delete a part used in a product</p>
+<p>Cannot delete a Tractor part used in a Custom Tractor</p>
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
 </body>
