--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Part Form</title>
+    <title>Custom Tractor Form</title>
 
 <!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
 </head>
 <body>
-<h1>Product Detail</h1>
+<h1>Custom Tractor Detail</h1>
 <form action="#" th:action="@{/showFormAddProduct}" th:object="${product}" method="POST"}>
     <!-- Add hidden form field to handle update -->
     <p><input type="hidden" th:field="*{id}"/></p>
@@ -32,7 +32,7 @@
 
 <table class="table table-bordered table-striped">
     <thead class="thead-dark">
-    <h2>Available Parts</h2>
+    <h2>Available Tractor Parts</h2>
     <tr>
         <th>Name</th>
         <th>Price</th>
@@ -51,7 +51,7 @@
     </form>
 </table>
     <table class="table table-bordered table-striped">
-        <h2>Associated Parts</h2>
+        <h2>Associated Tractor Parts</h2>
         <thead class="thead-dark">
         <tr>
             <th>Name</th>
