--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -86,6 +86,8 @@
         </tr>
         </tbody>
     </table>
+    <a href="http://localhost:8080/about">Link
+        to About Page</a>
 </div>
 </body>
 </html>
