--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -14,7 +14,7 @@
     <title>About Page</title>
 </head>
 <body>
-    <div style="text-align:left" class="container">
+    <div class="container">
         <h1>About Us</h1>
         <hr>
         <h3>Mission</h3>
