--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -20,12 +20,19 @@
 
 <p><input type="text" path="inv" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
     <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
+    <!--<p th:if="${!rangeCheck}">Inventory must be within Max and Min Inventory values</p>-->
+
+    <p><input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="form-control mb-4 col-4"/></p>
+    <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>
+
+    <p><input type="text" path="maxInv" th:field="*{maxInv}" placeholder="Maximum Inventory" class="form-control mb-4 col-4"/></p>
+    <p th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}">Maximum Inventory Error</p>
 
     <p><input type="text" th:field="*{partId}" placeholder="Part ID" class="form-control mb-4 col-4"/></p>
 
 <p><input type="submit" value="Submit" /></p>
 </form>
-<p><errors path="price" cssClass=""error/><p>
+<p><errors path="price" cssClass="error"/><p>
 
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
