--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -21,7 +21,8 @@
 
 <p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
     <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
-    <!--<p th:if="${!rangeCheck}">Inventory must be within Max and Min Inventory values</p>-->
+    <p th:if="${!minRangeCheck}">Inventory must be at or above Minimum Inventory value</p>
+    <p th:if="${!maxRangeCheck}">Inventory must be at or below Maximum Inventory value</p>
 
     <p><input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="form-control mb-4 col-4"/></p>
     <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>
@@ -33,6 +34,8 @@
 
 <p><input type="submit" value="Submit" /></p>
 </form>
+
+<p th:if="${!minMaxCheck}">Minimum Inventory must be less than Maximum Inventory</p>
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
 </body>
