--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Custom Tractor Form</title>
-
 <!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
 </head>
 <body>
@@ -29,6 +28,7 @@
     <p><input type="submit" value="Submit" /></p>
 </form>
 
+<span class="popuptext" style="color: red" th:if="${lowInventory}" id="myPopup">The Part You Tried to add is too Low Inventory</span>
 
 <table class="table table-bordered table-striped">
     <thead class="thead-dark">
